--- a/build.gradle
+++ b/build.gradle
@@ -126,14 +126,12 @@ dependencies {
     implementation fg.deobf("dev.xkmc.l2serial:l2serial:1.1.1")
 
     implementation fg.deobf("mezz.jei:jei-${jei_minecraft_version}:${jei_version}")
-    implementation fg.deobf("top.theillusivec4.curios:curios-forge:${curios_version}")
+    compileOnly fg.deobf("top.theillusivec4.curios:curios-forge:${curios_version}")
 
-    implementation fg.deobf('curse.maven:the-twilight-forest-227639:4516391')
-
-    runtimeOnly fg.deobf('curse.maven:wthit-forge-455982:4512108')
-    runtimeOnly fg.deobf('curse.maven:badpackets-615134:4438956')
-    runtimeOnly fg.deobf('curse.maven:attributefix-280510:4445193')
-    runtimeOnly fg.deobf('curse.maven:max-health-fix-492246:4447240')
+    //runtimeOnly fg.deobf('curse.maven:wthit-forge-455982:4512108')
+    //runtimeOnly fg.deobf('curse.maven:badpackets-615134:4438956')
+    //runtimeOnly fg.deobf('curse.maven:attributefix-280510:4445193')
+    //runtimeOnly fg.deobf('curse.maven:max-health-fix-492246:4447240')
 
     //runtimeOnly fg.deobf('curse.maven:charm-of-undying-316873:3927421')
     //runtimeOnly fg.deobf("vazkii.patchouli:Patchouli:1.19.2-76")
