--- a/build.gradle
+++ b/build.gradle
@@ -123,10 +123,10 @@ dependencies {
     annotationProcessor "org.spongepowered:mixin:${mixin_version}:processor"
     implementation fg.deobf("dev.xkmc.l2library:l2library:${l2library_version}-slim")
     implementation fg.deobf("com.tterrag.registrate:Registrate:${registrate_version}")
-    implementation fg.deobf("dev.xkmc.l2serial:l2serial:1.1.1")
+    implementation fg.deobf("dev.xkmc.l2serial:l2serial:1.1.2")
 
     implementation fg.deobf("mezz.jei:jei-${jei_minecraft_version}:${jei_version}")
-    compileOnly fg.deobf("top.theillusivec4.curios:curios-forge:${curios_version}")
+    implementation fg.deobf("top.theillusivec4.curios:curios-forge:${curios_version}")
 
     //runtimeOnly fg.deobf('curse.maven:wthit-forge-455982:4512108')
     //runtimeOnly fg.deobf('curse.maven:badpackets-615134:4438956')
