--- a/gradle.properties
+++ b/gradle.properties
@@ -6,7 +6,7 @@ org.gradle.daemon=false
 
 # mod version info
 modid = l2tabs
-ll_version = 0.1.0-a1
+ll_version = 0.1.1
 minecraft_version = 1.20
 forge_version = 46.0.14
 
