--- a/gradle.properties
+++ b/gradle.properties
@@ -6,9 +6,9 @@ org.gradle.daemon=false
 
 # mod version info
 modid = l2tabs
-ll_version = 0.1.3
-minecraft_version = 1.20
-forge_version = 46.0.14
+ll_version = 0.1.4
+minecraft_version = 1.20.1
+forge_version = 47.0.49
 
 # build dependency versions
 forgegradle_version = 5.1.+
@@ -17,9 +17,9 @@ mixin_version = 0.8.5
 mixin_extras_version = 0.2.0-beta.8
 
 # dependency versions
-registrate_version = MC1.20-1.3.1
-jei_minecraft_version = 1.20-forge
-jei_version = 14.0.0.4
-curios_version = 5.2.0-beta.2+1.20
+registrate_version = MC1.20-1.3.3
+jei_minecraft_version = 1.20.1-forge
+jei_version = 15.2.0.22
+curios_version = 5.2.0-beta.3+1.20.1
 
-l2library_version = 2.4.3-a0
+l2library_version = 2.4.7
