--- a/build.gradle
+++ b/build.gradle
@@ -141,10 +141,14 @@ dependencies {
     // TODO debug only
     runtimeOnly fg.deobf("curse.maven:mysterious-mountain-lib-368098:4589606")
     runtimeOnly fg.deobf("curse.maven:umapyoi-776121:4589608")
-    runtimeOnly fg.deobf("curse.maven:irons-spells-n-spellbooks-855414:4629398")
+    //runtimeOnly fg.deobf("curse.maven:irons-spells-n-spellbooks-855414:4629398")
     runtimeOnly fg.deobf("curse.maven:caelus-308989:4581481")
-    runtimeOnly fg.deobf("curse.maven:geckolib-388172:4627674")
-    runtimeOnly fg.deobf("curse.maven:playeranimator-658587:4587214")
+    //runtimeOnly fg.deobf("curse.maven:geckolib-388172:4627674")
+    //runtimeOnly fg.deobf("curse.maven:playeranimator-658587:4587214")
+
+    runtimeOnly fg.deobf("curse.maven:kotlin-for-forge-351264:4778283")
+    runtimeOnly fg.deobf("curse.maven:libipn-679177:4870127")
+    runtimeOnly fg.deobf("curse.maven:inventory-profiles-next-495267:4813458")
 
 }
 
