--- a/gradle.properties
+++ b/gradle.properties
@@ -6,7 +6,7 @@ org.gradle.daemon=false
 
 # mod version info
 modid = l2tabs
-ll_version = 0.1.5
+ll_version = 0.1.6
 minecraft_version = 1.20.1
 forge_version = 47.0.49
 
@@ -20,6 +20,6 @@ mixin_extras_version = 0.2.0-beta.8
 registrate_version = MC1.20-1.3.3
 jei_minecraft_version = 1.20.1-forge
 jei_version = 15.2.0.22
-curios_version = 5.2.0-beta.3+1.20.1
+curios_version = 5.4.3+1.20.1
 
 l2library_version = 2.4.7
