--- a/gradle.properties
+++ b/gradle.properties
@@ -22,4 +22,4 @@ jei_minecraft_version = 1.20.1-forge
 jei_version = 15.2.0.22
 curios_version = 5.4.5+1.20.1
 
-l2library_version = 2.4.21
+l2library_version = 2.4.23-pre1
