--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -1,1 +1,1 @@
-public-f net.minecraft.world.entity.ai.attributes.AttributeModifier f_22192_ # nameGetter
+public-f net.minecraft.world.entity.ai.attributes.AttributeModifier name
