--- a/gradle.properties
+++ b/gradle.properties
@@ -1,25 +1,32 @@
 # Sets default memory used for gradle commands. Can be overridden by user or command line properties.
-# This is required to provide enough memory for the Minecraft decompilation process.
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
+org.gradle.debug=false
 
+#read more on this at https://github.com/neoforged/NeoGradle/blob/NG_7.0/README.md#apply-parchment-mappings
+# you can also find the latest versions at: https://parchmentmc.org/docs/getting-started
+neogradle.subsystems.parchment.minecraftVersion=1.20.3
+neogradle.subsystems.parchment.mappingsVersion=2023.12.31
 
-# mod version info
-modid = l2tabs
-ll_version = 0.3.0
-minecraft_version = 1.20.1
-forge_version = 47.0.49
+minecraft_version=1.20.4
+minecraft_version_range=[1.20.4,1.21)
+neo_version=20.4.160-beta
+neo_version_range=[20.4,)
+loader_version_range=[2,)
 
-# build dependency versions
-forgegradle_version = 5.1.+
-mixingradle_version = 0.7-SNAPSHOT
-mixin_version = 0.8.5
-mixin_extras_version = 0.2.0-beta.8
+## Mod Properties
+mod_id=l2tabs
+mod_name=L2Library-Tabs
+mod_license=LGPL-2.1
+mod_version=2.5.0-pre0
+mod_group_id=dev.xkmc
+mod_authors=lcy0x1
+mod_description=Inventory tabs and tabs in other menu
 
-# dependency versions
-registrate_version = MC1.20-1.3.3
-jei_minecraft_version = 1.20.1-forge
-jei_version = 15.2.0.22
-curios_version = 5.4.5+1.20.1
+registrate_version = MC1.20-1.3.11
+jei_minecraft_version = 1.20.4-neoforge
+jei_version = 17.3.0.49
+curios_version = 7.3.0+1.20.4
 
-l2library_version = 2.4.23-pre1
+l2serial_ver = 2.5.0-pre7
+l2library_ver = 2.5.0-pre0-slim
