--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -1,35 +1,21 @@
-modLoader="javafml"
-loaderVersion="[46,)"
-license="All rights reserved"
-[[mods]]
-modId="l2tabs"
-version="${file.jarVersion}" #mandatory
-displayName="L2 Tabs" #mandatory
-logoFile="l2tabs.png" #optional
-credits="Thanks for this example mod goes to Java" #optional
-authors="Love, Cheese and small house plants" #optional
-description='''
-'''
-[[dependencies.l2tabs]]
-    modId="forge"
-    mandatory=true
-    versionRange="[46.0.0,)"
-    ordering="NONE"
-    side="BOTH"
-[[dependencies.l2tabs]]
-    modId="minecraft"
-    mandatory=true
-    versionRange="[1.20,1.21)"
-    ordering="NONE"
-    side="BOTH"
-[[dependencies.l2tabs]]
-    modId="l2library"
-    mandatory=true
-    versionRange="[2.4.0,)"
-    ordering="AFTER"
-    side="BOTH"
-[[dependencies.l2tabs]]
-    modId="curios"
-    mandatory=false
-    versionRange="[5.3.4,)"
-    side="BOTH"
+modLoader = "javafml" #mandatory
+loaderVersion = "${loader_version_range}" #mandatory
+license = "${mod_license}"
+[[mods]] #mandatory
+modId = "${mod_id}" #mandatory
+version = "${mod_version}" #mandatory
+displayName = "${mod_name}" #mandatory
+authors = "${mod_authors}" #optional
+description = '''${mod_description}'''
+[[dependencies.${ mod_id }]] #optional
+modId = "neoforge" #mandatory
+type = "required" #mandatory
+versionRange = "${neo_version_range}" #mandatory
+ordering = "NONE"
+side = "BOTH"
+[[dependencies.${ mod_id }]]
+modId = "minecraft"
+type = "required"
+versionRange = "${minecraft_version_range}"
+ordering = "NONE"
+side = "BOTH"
