--- a/build.gradle
+++ b/build.gradle
@@ -149,6 +149,8 @@ dependencies {
     runtimeOnly fg.deobf("curse.maven:kotlin-for-forge-351264:4778283")
     runtimeOnly fg.deobf("curse.maven:libipn-679177:4870127")
     runtimeOnly fg.deobf("curse.maven:inventory-profiles-next-495267:4813458")
+    runtimeOnly fg.deobf("curse.maven:apothic-attributes-898963:4954000")
+    runtimeOnly fg.deobf("curse.maven:placebo-283644:5098182")
 
 }
 
