--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ plugins {
     id 'eclipse'
     id 'idea'
     id 'maven-publish'
-    id 'net.neoforged.gradle.userdev' version '7.0.80'
+    id 'net.neoforged.gradle.userdev' version '7.0.145'
 }
 
 version = mod_version
@@ -17,7 +17,7 @@ base {
     archivesName = mod_id
 }
 
-java.toolchain.languageVersion = JavaLanguageVersion.of(17)
+java.toolchain.languageVersion = JavaLanguageVersion.of(21)
 
 minecraft.accessTransformers.file rootProject.file('src/main/resources/META-INF/accesstransformer.cfg')
 
@@ -134,58 +134,8 @@ repositories {
 }
 
 dependencies {
-    // base dep
     implementation "mezz.jei:jei-${jei_minecraft_version}:${jei_version}"
-    implementation "top.theillusivec4.curios:curios-neoforge:${curios_version}"
-
+    implementation "com.tterrag.registrate:Registrate:${registrate_version}"
     implementation "dev.xkmc:l2serial:${l2serial_ver}"
-    implementation "dev.xkmc:l2library:${l2library_ver}"
-
-    /*
-    implementation fg.deobf(jarJar("dev.xkmc.l2tabs:l2tabs:0.2.6")) {
-        transitive = false
-        jarJar.ranged(it, "[0.2.6,)")
-    }
-
-    implementation fg.deobf(jarJar("dev.xkmc.l2screentracker:l2screentracker:0.1.4")) {
-        transitive = false
-        jarJar.ranged(it, "[0.1.4,)")
-    }
-
-    runtimeOnly fg.deobf(jarJar("dev.xkmc.l2modularblock:l2modularblock:1.1.0")) {
-        transitive = false
-        jarJar.ranged(it, "[1.1.0,)")
-    }
-
-    runtimeOnly fg.deobf(jarJar("dev.xkmc.l2itemselector:l2itemselector:0.1.7")) {
-        transitive = false
-        jarJar.ranged(it, "[0.1.7,)")
-    }
-
-     */
-
-    //runtimeOnly fg.deobf("dev.xkmc.l2damagetracker:l2damagetracker:0.2.4")
-    //runtimeOnly fg.deobf("dev.xkmc.l2backpack:l2backpack:2.4.12-slim")
-    //runtimeOnly fg.deobf("dev.xkmc.l2complements:l2complements:2.4.18-slim")
-    //runtimeOnly fg.deobf('dev.xkmc.modulargolems:modulargolems:2.4.16-slim')
-    //runtimeOnly fg.deobf("dev.xkmc.l2archery:l2archery:2.4.9")
-    //runtimeOnly fg.deobf("dev.xkmc.l2weaponry:l2weaponry:2.4.18")
-    //runtimeOnly fg.deobf("dev.xkmc.l2artifacts:l2artifacts:2.4.8-slim")
-
-    //runtimeOnly fg.deobf("curse.maven:create-328085:4626108")
-    //implementation fg.deobf("curse.maven:just-enough-effect-descriptions-jeed-532286:4599236")
-
-    //runtimeOnly fg.deobf("curse.maven:badpackets-615134:4438956")
-    //runtimeOnly fg.deobf("curse.maven:wthit-forge-455982:4596739")
-    //runtimeOnly fg.deobf("curse.maven:attributefix-280510:4588114")
-    //runtimeOnly fg.deobf("curse.maven:bookshelf-228525:4581675")
-    //runtimeOnly fg.deobf("curse.maven:enchantment-descriptions-250419:4587429")
-    //runtimeOnly fg.deobf("curse.maven:appleskin-248787:4605078")
-    //implementation fg.deobf("curse.maven:patchouli-306770:4636277")
-
-    //runtimeOnly fg.deobf("dev.xkmc.traderefresh:traderefresh:2.1.1-slim")
-    //runtimeOnly fg.deobf("dev.xkmc.lasertransport:lasertransport:2.2.0.pre5-slim")
-
-    //runtimeOnly fg.deobf('curse.maven:max-health-fix-492246:4447240')
-    //runtimeOnly fg.deobf('curse.maven:the-twilight-forest-227639:4516391')
+    implementation "dev.xkmc:l2core:${l2core_ver}"
 }
