--- a/gradle.properties
+++ b/gradle.properties
@@ -5,28 +5,31 @@ org.gradle.debug=false
 
 #read more on this at https://github.com/neoforged/NeoGradle/blob/NG_7.0/README.md#apply-parchment-mappings
 # you can also find the latest versions at: https://parchmentmc.org/docs/getting-started
-neogradle.subsystems.parchment.minecraftVersion=1.20.3
-neogradle.subsystems.parchment.mappingsVersion=2023.12.31
+neogradle.subsystems.parchment.minecraftVersion=1.20.6
+neogradle.subsystems.parchment.mappingsVersion=2024.06.02
 
-minecraft_version=1.20.4
-minecraft_version_range=[1.20.4,1.21)
-neo_version=20.4.160-beta
-neo_version_range=[20.4,)
+minecraft_version=1.21
+minecraft_version_range=[1.21,1.22)
+neo_version=21.0.19-beta
+neo_version_range=[21.0,)
 loader_version_range=[2,)
 
 ## Mod Properties
 mod_id=l2tabs
-mod_name=L2Library-Tabs
+mod_name=L2Tabs
 mod_license=LGPL-2.1
-mod_version=2.5.0-pre0
+mod_version=3.0.0
 mod_group_id=dev.xkmc
 mod_authors=lcy0x1
-mod_description=Inventory tabs and tabs in other menu
+mod_description=Inventory Tabs
 
-registrate_version = MC1.20-1.3.11
-jei_minecraft_version = 1.20.4-neoforge
-jei_version = 17.3.0.49
-curios_version = 7.3.0+1.20.4
 
-l2serial_ver = 2.5.0-pre7
-l2library_ver = 2.5.0-pre3-slim
+jei_minecraft_version = 1.21-neoforge
+jei_version = 19.0.0.7
+registrate_version = MC1.21-1.4.0
+
+lljij = false
+rootMod = false
+
+l2serial_ver = 3.0.0
+l2core_ver = 3.0.1
