--- a/gradle.properties
+++ b/gradle.properties
@@ -10,7 +10,7 @@ neogradle.subsystems.parchment.mappingsVersion=2024.06.02
 
 minecraft_version=1.21
 minecraft_version_range=[1.21,1.22)
-neo_version=21.0.19-beta
+neo_version=21.0.38-beta
 neo_version_range=[21.0,)
 loader_version_range=[2,)
 
@@ -25,11 +25,12 @@ mod_description=Inventory Tabs
 
 
 jei_minecraft_version = 1.21-neoforge
-jei_version = 19.0.0.7
+jei_version = 19.0.0.11
 registrate_version = MC1.21-1.4.0
+curios_version = 9.0.3+1.21
 
 lljij = false
 rootMod = false
 
 l2serial_ver = 3.0.0
-l2core_ver = 3.0.1
+l2core_ver = 3.0.2-pre3
