--- a/gradle.properties
+++ b/gradle.properties
@@ -18,7 +18,7 @@ loader_version_range=[2,)
 mod_id=l2tabs
 mod_name=L2Tabs
 mod_license=LGPL-2.1
-mod_version=3.0.0
+mod_version=3.0.1
 mod_group_id=dev.xkmc
 mod_authors=lcy0x1
 mod_description=Inventory Tabs
@@ -26,11 +26,11 @@ mod_description=Inventory Tabs
 
 jei_minecraft_version = 1.21-neoforge
 jei_version = 19.0.0.11
-registrate_version = MC1.21-1.4.0
+registrate_version = MC1.21-1.4.1
 curios_version = 9.0.3+1.21
 
 lljij = false
 rootMod = false
 
-l2serial_ver = 3.0.0
-l2core_ver = 3.0.2-pre3
+l2serial_ver = 3.0.1
+l2core_ver = 3.0.2
