--- a/gradle.properties
+++ b/gradle.properties
@@ -10,7 +10,7 @@ neogradle.subsystems.parchment.mappingsVersion=2024.06.02
 
 minecraft_version=1.21
 minecraft_version_range=[1.21,1.22)
-neo_version=21.0.38-beta
+neo_version=21.0.112-beta
 neo_version_range=[21.0,)
 loader_version_range=[2,)
 
@@ -18,19 +18,18 @@ loader_version_range=[2,)
 mod_id=l2tabs
 mod_name=L2Tabs
 mod_license=LGPL-2.1
-mod_version=3.0.2
+mod_version=3.0.3-pre3
 mod_group_id=dev.xkmc
 mod_authors=lcy0x1
 mod_description=Inventory Tabs
 
-
 jei_minecraft_version = 1.21-neoforge
-jei_version = 19.0.0.11
-registrate_version = MC1.21-1.4.1
+jei_version = 19.5.0.44
+registrate_version = MC1.21-1.4.7+5e718e9
 curios_version = 9.0.3+1.21
 
 lljij = false
 rootMod = false
 
-l2serial_ver = 3.0.2
-l2core_ver = 3.0.2
+l2serial_ver = 3.0.7
+l2core_ver = 3.0.5-pre36
