--- a/gradle.properties
+++ b/gradle.properties
@@ -18,7 +18,7 @@ loader_version_range=[2,)
 mod_id=l2tabs
 mod_name=L2Tabs
 mod_license=LGPL-2.1
-mod_version=3.0.3-pre3
+mod_version=3.0.3-pre4
 mod_group_id=dev.xkmc
 mod_authors=lcy0x1
 mod_description=Inventory Tabs
@@ -32,4 +32,4 @@ lljij = false
 rootMod = false
 
 l2serial_ver = 3.0.7
-l2core_ver = 3.0.5-pre36
+l2core_ver = 3.0.5
