--- a/build.gradle
+++ b/build.gradle
@@ -146,6 +146,7 @@ dependencies {
     implementation "com.tterrag.registrate:Registrate:${registrate_version}"
     implementation "dev.xkmc:l2serial:${l2serial_ver}"
     implementation "dev.xkmc:l2core:${l2core_ver}"
+    implementation "dev.xkmc:l2menustacker:${l2menustacker_ver}"
 
     //implementation "top.theillusivec4.curios:curios-neoforge:${curios_version}"
     //implementation "curse.maven:adorned-1036809:5546365"
@@ -157,7 +158,6 @@ dependencies {
     implementation "curse.maven:elytra-slot-317716:5542492"
 
     runtimeOnly "dev.xkmc:l2itemselector:${l2itemselector_ver}"
-    runtimeOnly "dev.xkmc:l2menustacker:${l2menustacker_ver}"
     runtimeOnly "dev.xkmc:l2library:${l2library_ver}"
     runtimeOnly "dev.xkmc:l2modularblocks:${l2modularblocks_ver}"
     runtimeOnly "dev.xkmc:l2backpack:${l2backpack_ver}"
