--- a/gradle.properties
+++ b/gradle.properties
@@ -18,7 +18,7 @@ loader_version_range=[2,)
 mod_id=l2tabs
 mod_name=L2Tabs
 mod_license=LGPL-2.1
-mod_version=3.0.3-pre6
+mod_version=3.0.3
 mod_group_id=dev.xkmc
 mod_authors=lcy0x1
 mod_description=Inventory Tabs
@@ -36,6 +36,6 @@ l2core_ver = 3.0.5
 
 l2modularblocks_ver = 3.0.0
 l2itemselector_ver = 3.0.7
-l2menustacker_ver = 3.0.7
+l2menustacker_ver = 3.0.8
 l2library_ver = 3.0.2-pre2
 l2backpack_ver = 3.0.2
