--- a/gradle.properties
+++ b/gradle.properties
@@ -18,7 +18,6 @@ loader_version_range=[2,)
 mod_id=l2tabs
 mod_name=L2Tabs
 mod_license=LGPL-2.1
-mod_version=3.0.4
 mod_group_id=dev.xkmc
 mod_authors=lcy0x1
 mod_description=Inventory Tabs
@@ -30,6 +29,8 @@ curios_version = 9.0.3+1.21
 
 lljij = false
 rootMod = false
+
+mod_version=3.0.5-pre0
 
 l2serial_ver = 3.0.7
 l2core_ver = 3.0.6-pre10
