--- a/gradle.properties
+++ b/gradle.properties
@@ -24,20 +24,21 @@ mod_description=Inventory Tabs
 
 jei_minecraft_version = 1.21-neoforge
 jei_version = 19.5.0.44
-registrate_version = MC1.21-1.4.7+5e718e9
+registrate_version = MC1.21-1.3.0+50
 curios_version = 9.0.3+1.21
 
 lljij = false
 rootMod = false
 
-mod_version=3.0.5-pre0
+mod_version=3.0.5
 
-l2serial_ver = 3.0.7
-l2core_ver = 3.0.6-pre10
+l2serial_ver = 3.0.9
+l2core_ver = 3.0.7-pre6
 
 l2modularblocks_ver = 3.0.0
 l2itemselector_ver = 3.0.7
-l2menustacker_ver = 3.0.8
+l2menustacker_ver = 3.0.9
 l2library_ver = 3.0.2-pre2
 l2backpack_ver = 3.0.3
-l2damagetracker_ver = 3.0.1
+l2damagetracker_ver = 3.0.2-pre1
+modulargolems_ver = 3.0.0-pre4-slim
