--- a/gradle.properties
+++ b/gradle.properties
@@ -30,15 +30,15 @@ curios_version = 9.0.3+1.21
 lljij = false
 rootMod = false
 
-mod_version=3.0.5
+mod_version=3.0.5+1
 
 l2serial_ver = 3.0.9
-l2core_ver = 3.0.7-pre6
+l2core_ver = 3.0.7+3
 
 l2modularblocks_ver = 3.0.0
 l2itemselector_ver = 3.0.7
 l2menustacker_ver = 3.0.9
 l2library_ver = 3.0.2-pre2
-l2backpack_ver = 3.0.3
+l2backpack_ver = 3.0.5
 l2damagetracker_ver = 3.0.2-pre1
-modulargolems_ver = 3.0.0-pre4-slim
+modulargolems_ver = 3.0.0+1-slim
