--- a/build.gradle
+++ b/build.gradle
@@ -156,10 +156,10 @@ dependencies {
     implementation "dev.xkmc:l2menustacker:${l2menustacker_ver}"
 
     //implementation "top.theillusivec4.curios:curios-neoforge:${curios_version}"
-    //implementation "curse.maven:adorned-1036809:5546365"
+    implementation "curse.maven:adorned-1036809:5740650"
     implementation "curse.maven:cloth-config-348521:5553805"
-    implementation "curse.maven:accessories-938917:5669937"
-    implementation "curse.maven:accessories-cc-layer-1005683:5669968"
+    compileOnly "curse.maven:accessories-938917:5669937"
+    compileOnly "curse.maven:accessories-cc-layer-1005683:5669968"
 
     implementation "curse.maven:caelus-308989:5442975"
     implementation "curse.maven:elytra-slot-317716:5542492"
