--- a/src/main/resources/META-INF/neoforge.mods.toml
+++ b/src/main/resources/META-INF/neoforge.mods.toml
@@ -21,3 +21,9 @@ type = "required"
 versionRange = "${minecraft_version_range}"
 ordering = "NONE"
 side = "BOTH"
+[[dependencies.${ mod_id }]]
+modId = "accessories"
+type = "optional"
+versionRange = "[1.1.0-beta.5+1.21.1,)"
+ordering = "NONE"
+side = "BOTH"
